Fix for issue: ios spinner is not visible when pagecontent is just having label in it.

--- a/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/mobile-layouts.less
@@ -363,7 +363,6 @@
     top: 0;
   }
   &.ios-refresh-container {
-    top: -100%;
     position: relative;
   }
 }
